Navbar button mobile resolve bug

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,6 +4,12 @@
   z-index: 1;
 
   // Hamburger Open Styles
+  a {
+    span {
+      background-color: $white;
+    }
+  }
+
   &.open {
     .header__toggle {
       > span:first-child {
@@ -72,7 +78,7 @@
     a {
       display: block;
       padding: 0.625rem;
-      color: $white;
+      color: $darkBlue;
       text-align: center;
     }
   }
